<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        tools:context="com.example.xixil.terminal.MainActivity">

    <TextView
            android:id="@+id/show_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="0"
            android:textSize="64sp" />

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <android.support.constraint.ConstraintLayout
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/mainContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_gravity="center_horizontal">

            <com.example.xixil.terminal.MainKeyboard
                    android:id="@+id/custom_btn1"
                    style="@style/StyleOfMainKeyboard"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/custom_btn2"
                    custom:text="@string/one" />
            <com.example.xixil.terminal.MainKeyboard
                    android:id="@+id/custom_btn2"
                    style="@style/StyleOfMainKeyboard"
                    app:layout_constraintLeft_toRightOf="@id/custom_btn1"
                    app:layout_constraintRight_toLeftOf="@id/custom_btn3"
                    custom:text="@string/two" />
            <com.example.xixil.terminal.MainKeyboard
                    android:id="@+id/custom_btn3"
                    style="@style/StyleOfMainKeyboard"
                    app:layout_constraintLeft_toRightOf="@id/custom_btn2"
                    app:layout_constraintRight_toRightOf="parent"
                    custom:text="@string/three" />


            <com.example.xixil.terminal.MainKeyboard
                    android:id="@+id/custom_btn4"
                    style="@style/StyleOfMainKeyboard"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/custom_btn1"
                    app:layout_constraintRight_toLeftOf="@id/custom_btn5"
                    custom:text="@string/four" />
            <com.example.xixil.terminal.MainKeyboard
                    android:id="@+id/custom_btn5"
                    style="@style/StyleOfMainKeyboard"
                    app:layout_constraintLeft_toRightOf="@id/custom_btn4"
                    app:layout_constraintRight_toLeftOf="@id/custom_btn6"
                    app:layout_constraintTop_toBottomOf="@id/custom_btn2"
                    custom:text="@string/five" />
            <com.example.xixil.terminal.MainKeyboard
                    android:id="@+id/custom_btn6"
                    style="@style/StyleOfMainKeyboard"
                    app:layout_constraintLeft_toRightOf="@id/custom_btn5"
                    app:layout_constraintTop_toBottomOf="@id/custom_btn3"
                    app:layout_constraintRight_toRightOf="parent"
                    custom:text="@string/six" />

            <com.example.xixil.terminal.MainKeyboard
                    android:id="@+id/custom_btn7"
                    style="@style/StyleOfMainKeyboard"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/custom_btn4"
                    app:layout_constraintRight_toLeftOf="@id/custom_btn8"
                    custom:text="@string/seven" />
            <com.example.xixil.terminal.MainKeyboard
                    android:id="@+id/custom_btn8"
                    style="@style/StyleOfMainKeyboard"
                    app:layout_constraintLeft_toRightOf="@id/custom_btn7"
                    app:layout_constraintRight_toLeftOf="@id/custom_btn9"
                    app:layout_constraintTop_toBottomOf="@id/custom_btn5"
                    custom:text="@string/eight" />
            <com.example.xixil.terminal.MainKeyboard
                    android:id="@+id/custom_btn9"
                    style="@style/StyleOfMainKeyboard"
                    app:layout_constraintLeft_toRightOf="@id/custom_btn8"
                    app:layout_constraintTop_toBottomOf="@id/custom_btn6"
                    app:layout_constraintRight_toRightOf="parent"
                    custom:text="@string/nine" />


            <com.example.xixil.terminal.MainKeyboard
                    android:id="@+id/custom_btn10"
                    style="@style/StyleOfMainKeyboard"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/custom_btn7"
                    app:layout_constraintRight_toLeftOf="@id/custom_btn11"
                    custom:text="@string/seven" />
            <com.example.xixil.terminal.MainKeyboard
                    android:id="@+id/custom_btn11"
                    style="@style/StyleOfMainKeyboard"
                    app:layout_constraintLeft_toRightOf="@id/custom_btn10"
                    app:layout_constraintRight_toLeftOf="@id/custom_btn12"
                    app:layout_constraintTop_toBottomOf="@id/custom_btn8"
                    custom:text="@string/eight" />
            <com.example.xixil.terminal.MainKeyboard
                    android:id="@+id/custom_btn12"
                    style="@style/StyleOfMainKeyboard"
                    app:layout_constraintLeft_toRightOf="@id/custom_btn11"
                    app:layout_constraintTop_toBottomOf="@id/custom_btn9"
                    app:layout_constraintRight_toRightOf="parent"
                    custom:text="@string/nine" />
        </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/additionContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:layout_gravity="center_horizontal">



            <com.example.xixil.terminal.AdditionKeyboard
                    android:id="@+id/lol1"
                    style="@style/StyleOfAdditionKeyboard"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/lol2"
                    custom:text="@string/nine"/>
            <com.example.xixil.terminal.AdditionKeyboard
                    android:id="@+id/lol2"
                    style="@style/StyleOfAdditionKeyboard"
                    app:layout_constraintBottom_toTopOf="@id/lol3"
                    app:layout_constraintRight_toRightOf="parent"
                    custom:text="@string/nine"/>

            <com.example.xixil.terminal.AdditionKeyboard
                    android:id="@+id/lol3"
                    style="@style/StyleOfAdditionKeyboard"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="@id/line"
                    custom:text="@string/nine"/>

             <android.support.constraint.Guideline
                     android:id="@+id/line"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     app:layout_constraintGuide_percent="0.5"/>


            </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</LinearLayout>
